[feature] Create configuration for docker-compose with postgreSQL and pgadmin4
