# build/build/swagger.json
@@ -6,77 +6,46 @@
         "requestBodies": {},
         "responses": {},
         "schemas": {
-            "User": {
+            "UserType": {
                 "properties": {
                     "id": {
                         "type": "number",
                         "format": "double"
                     },
-                    "email": {
-                        "type": "string"
-                    },
                     "name": {
                         "type": "string"
                     },
-                    "status": {
-                        "anyOf": [
-                            {
-                                "type": "string",
-                                "enum": [
-                                    "Happy"
-                                ],
-                                "nullable": false
-                            },
-                            {
-                                "type": "string",
-                                "enum": [
-                                    "Sad"
-                                ],
-                                "nullable": false
-                            }
-                        ]
-                    },
-                    "phoneNumbers": {
-                        "items": {
-                            "type": "string"
-                        },
-                        "type": "array"
+                    "cellphone": {
+                        "type": "string"
                     }
                 },
                 "required": [
-                    "id",
-                    "email",
-                    "name",
-                    "phoneNumbers"
+                    "id"
                 ],
                 "type": "object",
                 "additionalProperties": false
             },
-            "Pick_User.email-or-name-or-phoneNumbers_": {
+            "Pick_UserType.id-or-name-or-cellphone_": {
                 "properties": {
-                    "email": {
-                        "type": "string"
+                    "id": {
+                        "type": "number",
+                        "format": "double"
                     },
                     "name": {
                         "type": "string"
                     },
-                    "phoneNumbers": {
-                        "items": {
-                            "type": "string"
-                        },
-                        "type": "array"
+                    "cellphone": {
+                        "type": "string"
                     }
                 },
                 "required": [
-                    "email",
-                    "name",
-                    "phoneNumbers"
+                    "id"
                 ],
                 "type": "object",
                 "description": "From T, pick a set of properties whose keys are in the union K"
             },
             "UserCreationParams": {
-                "$ref": "#/components/schemas/Pick_User.email-or-name-or-phoneNumbers_"
+                "$ref": "#/components/schemas/Pick_UserType.id-or-name-or-cellphone_"
             }
         },
         "securitySchemes": {}
@@ -100,7 +69,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/User"
+                                    "$ref": "#/components/schemas/UserType"
                                 }
                             }
                         }
