# src/domains/users/userType.ts
@@ -1,0 +1,5 @@
+export interface UserType {
+    id: number;
+    name?: string;
+    cellphone?: string;
+}
