# src/models/User.ts
@@ -1,0 +1,26 @@
+import { Sequelize, DataTypes, Model } from 'sequelize'
+// const sequelize = new Sequelize('sqlite::memory:');
+import { sequelize } from '../config/db'
+
+export class User extends Model { }
+
+User.init({
+    id: {
+        type: DataTypes.INTEGER,
+        autoIncrement: true,
+        primaryKey: true,
+        allowNull: false
+    },
+    name: {
+        type: DataTypes.STRING,
+        allowNull: false
+    },
+    cellphone: {
+        type: DataTypes.STRING,
+        allowNull: true
+    }
+}, {
+    // Other model options go here
+    sequelize, // We need to pass the connection instance
+    modelName: 'User' // We need to choose the model name
+})
